# articulos-tpv

./: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
src/: app.rs  main.rs
src/components/: articles_list.rs  articles_list.scss  articulo_card.rs  articulo_card.scss  btn_container.rs  card.rs  controls.rs  controls.scss  delete_icon.rs  edit_icon.rs  families.rs  families.scss  mod.rs  modal.rs  modal.scss  modification_list.rs  modification_list.scss  navbar.rs  navbar.scss  panels.rs  panels.scss  precio_item.rs  upd_articulo_form.rs  upd_articulo_form.scss
src/context/: filters.rs  mod.rs  modifications.rs
src/hooks/: mod.rs  use_articles.rs  use_cajtpv.rs  use_family.rs
src/mocks/: cajtpv.json
src/models/: articulo.rs  articulo_dto.rs  cajtpv.rs  familias.rs  mod.rs  paneles.rs
