[package]
name = "articulos-tpv"
version = "0.1.0"
edition = "2021"
description = "Frontend para la app de Articulos"
readme = "README.md"
repository = ""
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo = "0.8.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
yew = { version="0.20", features=["csr"] }
